add_subdirectory(base)
add_subdirectory(common)
add_subdirectory(container)
add_subdirectory(coroutine)
add_subdirectory(file)
add_subdirectory(function)
add_subdirectory(function_v20)
add_subdirectory(lock)
add_subdirectory(log)
add_subdirectory(mempool)
add_subdirectory(smart_ptr)
add_subdirectory(smart_ptr_v20)
add_subdirectory(thread)
add_subdirectory(timestamp)
add_subdirectory(uuid)
add_subdirectory(design_mode)
add_subdirectory(message)
add_subdirectory(signals_slots)
add_subdirectory(validity_check)
add_subdirectory(string)
add_subdirectory(string_v20)
add_subdirectory(string_v30)
add_subdirectory(system_info)
add_subdirectory(module_info)
add_subdirectory(boost_wheel)




