
set( NETFRAME_CORE_ENABLE 0 )
set( NETFRAME_PACKET_ENABLE 0 )
set( NETFRAME_CMDSESSION_ENABLE 0 )
set( NETFRAME_STREAMSESSION_ENABLE 0 )
set( NETFRAME_RAWSESSION_ENABLE 0 )

if( NETFRAME_ASYNCCMDCLIENTS_ENABLE EQUAL 1 OR
	NETFRAME_SYNCCMDCLIENTS_ENABLE EQUAL 1 OR
	NETFRAME_CMDSERVER_ENABLE EQUAL 1 OR
	NETFRAME_CMDSERVER_V10_ENABLE EQUAL 1 OR
	NETFRAME_ASYNCFILECLIENTS_ENABLE EQUAL 1 OR
	NETFRAME_SYNCFILECLIENTS_ENABLE EQUAL 1 OR
	NETFRAME_FILESERVER_ENABLE EQUAL 1 OR
	NETFRAME_ASYNCSTREAMCLIENTS_ENABLE EQUAL 1 OR
	NETFRAME_SYNCSTREAMCLIENTS_ENABLE EQUAL 1 OR
	NETFRAME_STREAMSERVER_ENABLE EQUAL 1 OR
	NETFRAME_ASYNCRAWCLIENTS_ENABLE EQUAL 1 OR
	NETFRAME_SYNCRAWCLIENTS_ENABLE EQUAL 1 OR
	NETFRAME_RAWSERVER_ENABLE EQUAL 1)
	set( NETFRAME_CORE_ENABLE 1 )
endif()
	
if( NETFRAME_ASYNCCMDCLIENTS_ENABLE EQUAL 1 OR
	NETFRAME_SYNCCMDCLIENTS_ENABLE EQUAL 1 OR
	NETFRAME_CMDSERVER_ENABLE EQUAL 1 OR
	NETFRAME_CMDSERVER_V10_ENABLE EQUAL 1 )
	set( NETFRAME_CMDSESSION_ENABLE 1 )
endif()
	
if( NETFRAME_ASYNCFILECLIENTS_ENABLE EQUAL 1 OR
	NETFRAME_SYNCFILECLIENTS_ENABLE EQUAL 1 OR
	NETFRAME_FILESERVER_ENABLE EQUAL 1 )
	set( NETFRAME_STREAMSESSION_ENABLE 1 )
endif()
	
if( NETFRAME_ASYNCSTREAMCLIENTS_ENABLE EQUAL 1 OR
	NETFRAME_SYNCSTREAMCLIENTS_ENABLE EQUAL 1 OR
	NETFRAME_STREAMSERVER_ENABLE EQUAL 1 )
	set( NETFRAME_STREAMSESSION_ENABLE 1 )
endif()
	
if( NETFRAME_ASYNCRAWCLIENTS_ENABLE EQUAL 1 OR
	NETFRAME_SYNCRAWCLIENTS_ENABLE EQUAL 1 OR
	NETFRAME_RAWSERVER_ENABLE EQUAL 1 )
	set( NETFRAME_RAWSESSION_ENABLE 1 )
endif()

if( NETFRAME_CORE_ENABLE EQUAL 1)
	add_subdirectory(core)
	add_subdirectory(packet)
endif()
 
add_subdirectory(command)
#add_subdirectory(raw)
#add_subdirectory(file)
add_subdirectory(stream)
add_subdirectory(session)


